:bug: Fix top-app-bar on mobile

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,4 +1,4 @@
 .top-app-bar {
-  z-index: 10;
+  z-index: 2;
   background-color: #202124;
 }
