--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,3 +9,10 @@ body {
 #app {
   height: 100%;
 }
+
+@media (max-width: 599px) {
+  .mdc-top-app-bar--fixed-adjust {
+    margin-top: 0;
+    padding-top: 56px;
+  }
+}
